--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2019",
-    "moduleResolution": "node",
+    "target": "ES2020",
     "module": "commonjs",
-    "lib": ["es2019"],
-    "sourceMap": true,
-    "outDir": "dist",
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
-    "resolveJsonModule": true,
-    "alwaysStrict": true,
-    "removeComments": true,
-    "noImplicitReturns": true,
+    "rootDir": "./src/",
+    "outDir": "./dist/",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "paths": {
-      "@src/*": ["./src/*"],
-      "@modules/*": ["./src/*"],
-      "@test/*": ["./test/*"]
-    },
-    "rootDirs": ["./src", "./test"],
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
-  },
-  "include": ["./src/**/*.ts", "./test/**/*.ts"],
-  "exclude": ["./node_modules/*", "dist"]
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+  }
 }
